added comment to the .env file

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DATABASE_NAME=db_name
-DATABASE_USER=username
-DATABASE_PASSWORD=password
-DATABASE_HOST=db
-DATABASE_PORT=3306
-DATABASE_ROOT_PASSWORD=root-password
+DATABASE_NAME=db_name # this database name
+DATABASE_USER=username # this database user name
+DATABASE_PASSWORD=password # this database password
+DATABASE_HOST=db # this database host (service name)
+DATABASE_PORT=3306 # this database port
+DATABASE_ROOT_PASSWORD=root-password # this database root password
